--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@xstate/react": "^1.3.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "xstate": "^4.19.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
